Update name in composer.json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "NameCaseLib/Ryaposov",
+    "name": "namecaselib/ryaposov",
     "description": "Library for rormating Russian and Ukranian names",
     "license": "MIT",
     "type": "project"
